# zRAG

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
analysis/: error_analysis.py
baselines/: contriever_rag.py  no_retrieval.py  run_baselines.py  standard_rag.py
configs/: __init__.py  evidence_poc.yaml  phase1_5_evidence.yaml  phase1_write.yaml  phase1_write_v2.yaml  phase2_read.yaml  phase2_track_a.yaml  phase3_full.yaml
data/: __init__.py  build_phase1_5_evidence_dataset.py  corpus_builder.py  download.py  evidence_dataloader.py  filter_qa.py
docs/: LLM-as-Memory 실험 설계서.md  Parametric QA 종합 실험 설계 계획서.md  RAG Experiment Design Methodology for Academic Research: A Comprehensive Guide.md  RAG 관련 최신 실험 설계 동향.docx  phase1_executive_summary.md  phase1_figure_descriptions.md  phase1_supplementary_analysis.md  phase1_technical_report.md  실험 설계 예시(claude).md
docs/legacy/: LLM as Memory 연구 종합 보고서(chatgpt).md  LLM as Memory 연구 종합 보고서(claude).md  README.md  (+1 more)
evaluation/: __init__.py  evaluate_efficiency.py  evaluate_qa.py  evaluate_ragas.py  evaluate_write.py  evidence_metrics.py  faithfulness.py  metrics.py
experiments/: __init__.py  fixed_reader.py  phase1_5_runner.py  phase1_runner.py  run_track_a.py
models/: __init__.py  adaptation.py  evidence_trainer.py  parametric_memory_llm.py  write_phase_model.py
notebooks/: 00_setup_and_config.ipynb  03_write_phase_training.ipynb  07_ablation_study.ipynb  08_analysis_and_visualization.ipynb
parametric-qa/: requirements.txt
scripts/: cleanup_phase1.sh  diagnose_z_usage.py  eval_z_only_nll.py  eval_z_ranking.py  eval_z_ranking_first_k.py  eval_z_ranking_first_token.py  run_phase1.sh  run_phase4.sh  test_integration.py  verify_data_mapping.py
training/: __init__.py  train_evidence.py  train_read_phase.py  train_write_phase.py
(+62 files in other folders)
