[project]
name = "zrag"
version = "0.1.0"
description = "LLM-as-Memory: Vector DB를 Local LLM으로 대체하는 연구 프로젝트"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jaeheon Lee" }
]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",

    # Data
    "datasets>=2.14.0",
    "sentence-transformers>=2.2.0",

    # Evaluation
    "rouge-score>=0.1.2",

    # Utilities
    "tqdm",
    "numpy",
    "pandas",
    "pyyaml",
    "omegaconf",
]

[project.optional-dependencies]
# 최소 의존성 (evidence metrics 테스트용)
minimal = []

# 개발 환경
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "ipython",
    "jupyter",
]

# 실험 환경 (전체)
experiment = [
    "flash-attn>=2.3.0",
    "ragas>=0.1.0",
    "wandb",
    "matplotlib",
    "scikit-learn",
    "rank-bm25",
]

# RAG 비교용
rag = [
    "rank-bm25",
    "faiss-cpu",
]

# 모든 의존성
all = [
    "zrag[dev,experiment,rag]",
]

[project.scripts]
train-evidence = "training.train_evidence:main"
test-integration = "scripts.test_integration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "models",
    "data",
    "evaluation",
    "training",
    "baselines",
    "configs",
    "scripts",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff",
    "ipython",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line too long

[tool.pytest.ini_options]
testpaths = ["tests", "scripts"]
python_files = ["test_*.py"]
addopts = "-v"
